--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ASCII Art Animation</title>
+  <title>Tisane Studio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Courier+Prime&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
