Add projects to homepage

--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
 <body>
   <div id="ascii-art-embed"></div>
   <script src="simple-ascii.js"></script>
+  <div id="project-container">
+    <a href="projects/ascii-vid-gen.html"> 
+      <p>ASCII video generator</p>
+    </a>
+  </div>
 </body>
 </html>
