--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 </head>
 <body>
   <div id="ascii-art-embed"></div>
-  <script src="simple-ascii.js"></script>
-  <div id="project-container">
-    <a href="projects/ascii-vid-gen.html"> 
-      <p>ASCII video generator</p>
-    </a>
+  <div class="main-layout">
+    <div class="copy-group">
+      <div class="tackle-group">
+        <span>tackle tacit</span> <span>tackle taste</span>
+      </div>
+      <div class="tisane">tisane</div>
+    </div>
+    <div id="project-container">
+      <a href="projects/ascii-vid-gen.html"> 
+        <p>ASCII video generator</p>
+      </a>
+    </div>
   </div>
+  <script src="simple-ascii.js"></script>
 </body>
 </html>
